--- a/advent-of-code/src/app/app.component.html
+++ b/advent-of-code/src/app/app.component.html
@@ -3,6 +3,7 @@
   <h1>
     Welcome to {{ title }}!
   </h1>
+  <h2>Day one part one result is {{ result }} </h2>
 
 
 <router-outlet></router-outlet>
