--- a/advent-of-code/src/app/app.component.html
+++ b/advent-of-code/src/app/app.component.html
@@ -1,9 +1,17 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-  <h2>Day one part one result is {{ result }} </h2>
+    <h1>
+        Welcome to {{ title }}!
+    </h1>
+        <h2>
+            Day one
+        <h4>
+            <h4>
+                part one result is {{ result1 }} 
+            </h4>
+            <h4>
+                part two result is {{ result2 }}
+            </h4>
 
 
-<router-outlet></router-outlet>
+    <router-outlet></router-outlet>
