--- a/advent-of-code/src/app/app.component.html
+++ b/advent-of-code/src/app/app.component.html
@@ -5,13 +5,15 @@
     </h1>
         <h2>
             Day one
-        <h4>
+        </h2>
             <h4>
                 part one result is {{ result1 }} 
             </h4>
             <h4>
                 part two result is {{ result2 }}
             </h4>
+
+            <app-day-2></app-day-2>
 
 
     <router-outlet></router-outlet>
