--- a/advent-of-code/src/day-2/day-2/day-2.component.html
+++ b/advent-of-code/src/day-2/day-2/day-2.component.html
@@ -1,9 +1,6 @@
 <h2>
     Day two
-    </h2>
-        <h4>
-            part one result is {{ result1 }}
-        </h4>
-        <h4>
-            part two result is {{ result2 }}
-        </h4>
+</h2>
+<h4>
+    part one result is {{ checkSumResult }}
+</h4>
