--- a/advent-of-code/src/app/app.component.html
+++ b/advent-of-code/src/app/app.component.html
@@ -14,6 +14,6 @@
             </h4>
 
             <app-day-2></app-day-2>
-
+            <app-day-2-part-2></app-day-2-part-2>
 
     <router-outlet></router-outlet>
