--- a/advent-of-code/src/app/app.component.html
+++ b/advent-of-code/src/app/app.component.html
@@ -15,5 +15,6 @@
 
             <app-day-2></app-day-2>
             <app-day-2-part-2></app-day-2-part-2>
+            <app-day-4></app-day-4>
 
     <router-outlet></router-outlet>
